--- a/5704Project.html
+++ b/5704Project.html
@@ -30,17 +30,17 @@
 
         <hr noshade="noshade">
 
-        <h2><font color="#005128">Project Title: </font><font><font color="#005128">[Your Project Title]</font></font></h2>
+        <h2><font color="#005128">Project Title: </font><font><font color="#005128"></font>Parallel computing applications and financial
+modelling</font></h2>
 
         <h2><font><font color="#005128">Name: Manlin Guo</font></font></h2>
 
         <h2><font><font color="#005128">E-Mail: mguo053@uottawa.ca</font></font></h2>
 
 
-
         <hr noshade="noshade">
         
-        <b><font color="#005128">Project Outline:</font></b> [at most 1/2 page outline of what you intend to do]
+        <b><font color="#005128">Project Outline:</font></b> 
         
         <p><b><font color="#005128">Startup Paper(s):</font></b> [list your startup paper(s) and include a link to the PDF file]</p>
 
