--- a/5704Project.html
+++ b/5704Project.html
@@ -30,8 +30,7 @@
 
         <hr noshade="noshade">
 
-        <h2><font color="#005128">Project Title: </font><font><font color="#005128"></font>Parallel computing applications and financial
-modelling</font></h2>
+        <h2><font color="#005128">Project Title: </font><font><font color="#005128"></font>Dynamic Hash Tables with DHash Algorithm</font></h2>
 
         <h2><font><font color="#005128">Name: Manlin Guo</font></font></h2>
 
@@ -40,9 +39,11 @@ modelling</font></h2>
 
         <hr noshade="noshade">
         
-        <b><font color="#005128">Project Outline:</font></b> 
+        <b><font color="#005128">Project Outline: </font></b> Hashing algorithm is significantly important for computer memory systems. DHash is designed for asynchronous shared memory system with multiprocessors. The challenge for most existing hash tables is the lack of robustness since the pre-defined hash functions cannot be changed even if they cannot evenly distributed incoming data to the hash table buckets. This issue has affected in operating systems including Linux Kernel and programming languages such as Perl, PHP and .NET. DHash, a non-blocking dynamic hash table, stems from lightweight distributing mechanism that can atomically and efficiently distribute each node. DHash can consistently outperforms the alternatives of concurrent regular operations at different concurrency levels with different operation mixes and average load factors. Furthermore, the parallelized rebuild operation with eight or more threads outperforms the alternatives.
         
-        <p><b><font color="#005128">Startup Paper(s):</font></b> [list your startup paper(s) and include a link to the PDF file]</p>
+        <p><b><font color="#005128">Startup Paper(s):</font></b>
+	<a href="/home/mguo/Desktop/Parallel Computing/DHash_Dynamic_Hash_Tables_With_Non-Blocking_Regular_Operations.pdf"> DHash_Dynamic_Hash_Tables_With_Non-Blocking_Regular_Operations </a>
+	</p>
 
         <p><b><font color="#005128">Deliverables:</font></b></p>
 
